<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/icon_person"
        android:title="@string/profile"/>
    <item
        android:id="@+id/choiceMeetingRoomFragment"
        android:enabled="true"
        android:icon="@drawable/icon_meetingroom"
        android:title="@string/reserve_meetingroom"/>
    <item
        android:id="@+id/coworkingFragment"
        android:enabled="true"
        android:icon="@drawable/icon_seat"
        android:title="@string/reserve_coworkingspace"/>
    <item
        android:id="@+id/reservationsFragment"
        android:enabled="true"
        android:icon="@drawable/icon_myreservations"
        android:title="@string/myReservations"/>
</menu>