...

                        <TextView
                            android:id="@+id/lblSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:labelFor="@id/seatSpinner"
                            android:text="@string/capaciteit"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <Spinner
                            android:id="@+id/seatSpinner"
                            android:layout_width="wrap_content"
...

                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/room_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
...
