...
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/txvProfileName"
            app:layout_constraintTop_toTopOf="@id/txvProfileName" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="@id/txvProfileBTW"
            app:layout_constraintTop_toBottomOf="@id/txvProfileBTW" />
...
