...
                android:layout_marginTop="62dp"
                android:layout_marginEnd="180dp"
                android:contentDescription="@string/location_img"
                android:src="@drawable/icon_place"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLocOne" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
...
