<resources>
    <string name="app_name">HIER</string>
    <string name="profile">Profiel</string>
    <string name="reserve_meetingroom">Zalen</string>
    <string name="reserve">Reserveer</string>
    <string name="reserve_coworkingspace">Stoelen</string>
    <string name="myReservations">Reservaties</string>
    <string name="login">Login</string>
    <string name="hier_logo">HIER logo</string>
    <string name="dagprijs_label">Prijs volledige dag:</string>
    <string name="halvedagprijs_label">Prijs halve dag:</string>
    <string name="avondprijs_label">Prijs avond:</string>
    <string name="tweeuurprijs_label">Prijs voor 2 uur:</string>
    <string name="grootte_label">zitplaatsen</string>
    <string name="euro">euro</string>
    <string name="info">Info</string>
    <string name="locatie">Locatie:</string>
    <string name="prijzen">Prijzen</string>
    <string name="info_choice">Maak een keuze uit de volgende 2 locaties:</string>
    <string name="adres_1">Albert Lienartstraat 24/1 \n 9300 Aalst</string>
    <string name="adres_2">Zandberg 6 \n 9300 Aalst</string>
    <string name="kies">Kies</string>
    <string name="date_choice">Kies een datum</string>
    <string name="coworking_gelijkvloers">Coworking 1 - gelijkvloers</string>
    <string name="bureel2_gelijkvloers">Bureel 2 - gelijkvloers</string>
    <string name="bureel1_gelijkvloers">Bureel 1 - gelijkvloers</string>
    <string name="reservation_recap">Samenvatting van uw reservatie</string>
    <string name="aanvragen">Aanvragen</string>
    <string name="auth0_clientId">tIHBlQvkYFg35zCofxtjKPvip5Yrg2b2</string>
    <string name="auth0_domain">devops-t4.eu.auth0.com</string>
    <string name="auth0_scheme">demo</string>
    <string name="logout">Afmelden</string>
    <string name="aantalPlaatsen">Aantal plaatsen:</string>
    <string name="profile_userData">Gebruikers gegevens</string>
    <string name="profile_name">Naam</string>
    <string name="profile_firstName">Voornaam</string>
    <string name="profile_email">Email</string>
    <string name="profile_tel">Tel</string>
    <string name="profile_btw">BTW</string>
    <string name="col1_header">Van</string>
    <string name="col2_header">Tot</string>
    <string name="col3_header">Type</string>
    <string name="col4_header">Zaal</string>
    <string name="capaciteit">Capaciteit</string>
    <string name="tijdstip_dag">Tijdstip dag</string>
    <string name="hier_arrow_img">Arrow image HIER</string>
    <string name="location_img">Location image</string>
    <string name="room_image">Room image</string>
    <string name="red_chair">Red chair</string>
    <string name="green_chair">Green chair</string>
    <string name="table">table</string>
    <string name="hier">HIER</string>
</resources>