<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.roomoverview.RoomOverviewFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.hier.ui.roomoverview.RoomOverviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <!-- <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:fontFamily="@font/trebms"
            android:textColor="@color/primary_pink"
            android:layout_marginTop="8dp"
            android:text="@string/rooms_fragment_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/room_list"
            android:layout_width="match_parent"
            android:layout_height="638dp"
            android:background="@color/primary_pink"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            <!--app:layout_constraintTop_toBottomOf="@+id/textView2"-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>