...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            app:srcCompat="@drawable/logo_hier" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="139dp"
            android:backgroundTint="@color/primary_pink"
            android:clickable="true"
            android:focusable="true"
...
